--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@types/styled-components": "^4.1.19",
     "axios": "^0.19.0",
     "json-server": "^0.15.1",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
     "redux": "^4.0.4",
     "redux-mock-store": "^1.5.3",
     "redux-saga": "^1.1.1",
@@ -66,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.145",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2"
