--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "16.9.2",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.0",
+    "@types/react-select": "^3.0.8",
     "@types/redux-mock-store": "^1.0.1",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^4.1.19",
